syntax = "proto3";

option java_multiple_files = true;
option java_package = "it.unibo.tuprolog.solve.lpaas.solverFactoryMessage";
option java_outer_classname = "SolverFactoryMessage";

package lpaas;
import "solveMessages.proto";

message SolverRequest {
  optional UnificatorMsg unificator = 1;
  optional RuntimeMsg runtime = 2;
  optional FlagsMsg flags = 3;
  optional TheoryMsg staticKb = 4;
  optional TheoryMsg dynamicKb = 5;
  optional OperatorSetMsg operators = 6;
  optional Channels inputStore = 7;
  optional Channels outputStore = 8;
  optional bool mutable = 9;
  optional bool defaultBuiltIns = 10;
}

message InputChannelMsg {
  Channels.ChannelID id = 1;
  string content = 2;
}

message SolverReply {
  string id = 1;
}


